# pokibooks

./: .gitignore  CHANGELOG.md  Dockerfile  Info.plist  PokiBooks.spec  PokiBooksLinux.spec  PokiBooksMacOs.spec  PokiBooksWin.spec  README.md  cache.json  checksums.txt  pyproject.toml  pyproject1.toml  requirements.txt  setup.py  themes.txt  update_version.py  version.py
.github/workflows/: cd.yml  ci.yml
scripts/: build_macos.sh  change_version.py  change_version.sh  checksums.sh  executables.sh  make_executables.sh  onefile.sh  run.sh  zip.sh
src/: basics.py  defaults.py  frames.py  main.py  menu.py  text_scroll.py  themes.py  window.py
src/tests/: frames_test.py  test_test.py
static/: icon.icns
templates/: CHANGELOG.md  CHANGELOG.md.j2
