[tool.poetry]
name = "poki-books"
version = "0.0.0"
description = "Simple book and text reader"
authors = ["pat955 <patricija.pivoraite@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
nltk = "3.8.1"
toml = "0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
changelog_file = "CHANGELOG.md"             # changelog file
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
dist_path = "dist/"                         # where to put dists
remove_dist = false                         # don't remove dists

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"
