[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "poki-books"
version = "0.1.3"
description = "Simple book and text reader"
authors = [ "pat955 <patricija.pivoraite@gmail.com>",]
readme = "README.md"
[[tool.poetry.packages]]
include = "src"

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release]
allow_zero_version = true
version_variable = "pyproject.toml:version"
branch = "main"
changelog_file = "CHANGELOG.md"
upload_to_pypi = false
upload_to_release = false
build_command = "pip install poetry && poetry build"
dist_path = "dist/"
remove_dist = true

[tool.poetry.dependencies]
python = "^3.10"
toml = "0.10.2"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.publish]
dist_glob_patterns = [ "dist/*",]
upload_to_vcs_release = true

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = true
insecure = false

[tool.semantic_release.branches.main]
match = "(main|master|addcd)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true
